[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "miraland-cli-output"
description = "Blockchain for community beyond the horizon"
version = "1.14.17-rc3"
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-cli-output"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
indicatif = "0.16.2"
miraland-account-decoder = { path = "../account-decoder", version = "=1.14.17-rc3" }
miraland-clap-utils = { path = "../clap-utils", version = "=1.14.17-rc3" }
miraland-cli-config = { path = "../cli-config", version = "=1.14.17-rc3" }
miraland-client = { path = "../client", version = "=1.14.17-rc3" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc3" }
miraland-transaction-status = { path = "../transaction-status", version = "=1.14.17-rc3" }
miraland-vote-program = { path = "../programs/vote", version = "=1.14.17-rc3" }
pretty-hex = "0.3.0"
semver = "1.0.10"
serde = "1.0.138"
serde_json = "1.0.81"
solarti-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = "=1.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
