[package]
name = "miraland-cli-output"
description = "Blockchain for community beyond the horizon"
documentation = "https://docs.rs/miraland-cli-output"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
Inflector = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
clap = "4.4.11"
console = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
miraland-account-decoder = { workspace = true }
miraland-clap-utils = { workspace = true }
miraland-cli-config = { workspace = true }
miraland-rpc-client-api = { workspace = true }
miraland-sdk = { workspace = true }
miraland-transaction-status = { workspace = true }
miraland-vote-program = { workspace = true }
pretty-hex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solarti-memo = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
