[package]
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
edition = "2021"
name = "miraland-cli"
description = "Blockchain for community beyond the horizon"
version = "1.14.17-rc7"
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
console = "0.15.0"
const_format = "0.2.25"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5"
ctrlc = { version = "3.2.2", features = ["termination"] }
h2 = "=0.3.20"
humantime = "2.0.1"
log = "0.4.17"
miraland-account-decoder = { path = "../account-decoder", version = "=1.14.17-rc7" }
miraland-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=1.14.17-rc7" }
miraland-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.14.17-rc7" }
miraland-clap-utils = { path = "../clap-utils", version = "=1.14.17-rc7" }
miraland-cli-config = { path = "../cli-config", version = "=1.14.17-rc7" }
miraland-cli-output = { path = "../cli-output", version = "=1.14.17-rc7" }
miraland-client = { path = "../client", version = "=1.14.17-rc7" }
miraland-config-program = { path = "../programs/config", version = "=1.14.17-rc7" }
miraland-faucet = { path = "../faucet", version = "=1.14.17-rc7" }
miraland-logger = { path = "../logger", version = "=1.14.17-rc7" }
miraland-program-runtime = { path = "../program-runtime", version = "=1.14.17-rc7" }
miraland-remote-wallet = { path = "../remote-wallet", version = "=1.14.17-rc7" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc7" }
miraland-transaction-status = { path = "../transaction-status", version = "=1.14.17-rc7" }
miraland-version = { path = "../version", version = "=1.14.17-rc7" }
miraland-vote-program = { path = "../programs/vote", version = "=1.14.17-rc7" }
num-traits = "0.2"
pretty-hex = "0.3.0"
reqwest = { version = "=0.11.11", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = "1.0.10"
serde = "1.0.138"
serde_derive = "1.0.103"
serde_json = "1.0.81"
solana_rbpf = "=0.2.31"
solarti-memo = { version = "3.0", features = ["no-entrypoint"] }
thiserror = "1.0.31"
tiny-bip39 = "0.8.2"

[dev-dependencies]
miraland-streamer = { path = "../streamer", version = "=1.14.17-rc7" }
miraland-test-validator = { path = "../test-validator", version = "=1.14.17-rc7" }
tempfile = "=3.6.0"

[[bin]]
name = "miraland"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
