[package]
name = "miraland-cli"
description = "Blockchain for sovereign individuals living in Mirascape Horizon"
documentation = "https://docs.rs/miraland-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
miraland-account-decoder = { workspace = true }
miraland-bpf-loader-program = { workspace = true }
miraland-clap-utils = { workspace = true }
miraland-cli-config = { workspace = true }
miraland-cli-output = { workspace = true }
miraland-client = { workspace = true }
miraland-config-program = { workspace = true }
miraland-faucet = { workspace = true }
miraland-loader-v4-program = { workspace = true }
miraland-logger = { workspace = true }
miraland-program-runtime = { workspace = true }
miraland-pubsub-client = { workspace = true }
miraland-remote-wallet = { workspace = true, features = ["default"] }
miraland-rpc-client = { workspace = true, features = ["default"] }
miraland-rpc-client-api = { workspace = true }
miraland-rpc-client-nonce-utils = { workspace = true }
miraland-sdk = { workspace = true }
miraland-tpu-client = { workspace = true, features = ["default"] }
miraland-transaction-status = { workspace = true }
miraland-version = { workspace = true }
miraland-vote-program = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana_rbpf = { workspace = true }
solarti-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
miraland-streamer = { workspace = true }
miraland-test-validator = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[[bin]]
name = "miraland"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
