[package]
name = "miraland-client-test"
description = "Miraland RPC Test"
documentation = "https://docs.rs/miraland-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures-util = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
miraland-client = { workspace = true }
miraland-ledger = { workspace = true }
miraland-measure = { workspace = true }
miraland-merkle-tree = { workspace = true }
miraland-metrics = { workspace = true }
miraland-perf = { workspace = true }
miraland-pubsub-client = { workspace = true }
miraland-rayon-threadlimit = { workspace = true }
miraland-rpc = { workspace = true }
miraland-rpc-client = { workspace = true }
miraland-rpc-client-api = { workspace = true }
miraland-runtime = { workspace = true }
miraland-sdk = { workspace = true }
miraland-streamer = { workspace = true }
miraland-test-validator = { workspace = true }
miraland-transaction-status = { workspace = true }
miraland-version = { workspace = true }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
miraland-logger = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
