[package]
name = "miraland-client"
version = "1.14.17-rc4"
description = "Miraland Client"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
repository = "https://github.com/miraland-labs/miraland"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-client"
license = "Apache-2.0"
edition = "2021"

[dependencies]
async-mutex = "1.4.0"
async-trait = "0.1.56"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
bytes = "1.1.0"
clap = "2.33.0"
crossbeam-channel = "0.5"
enum_dispatch = "0.3.8"
futures = "0.3"
futures-util = "0.3.21"
indexmap = "1.9.1"
indicatif = "0.16.2"
itertools = "0.10.2"
jsonrpc-core = "18.0.0"
lazy_static = "1.4.0"
log = "0.4.17"
miraland-account-decoder = { path = "../account-decoder", version = "=1.14.17-rc4" }
miraland-clap-utils = { path = "../clap-utils", version = "=1.14.17-rc4" }
miraland-faucet = { path = "../faucet", version = "=1.14.17-rc4" }
miraland-measure = { path = "../measure", version = "=1.14.17-rc4" }
miraland-metrics = { path = "../metrics", version = "=1.14.17-rc4" }
miraland-net-utils = { path = "../net-utils", version = "=1.14.17-rc4" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc4" }
miraland-streamer = { path = "../streamer", version = "=1.14.17-rc4" }
miraland-transaction-status = { path = "../transaction-status", version = "=1.14.17-rc4" }
miraland-version = { path = "../version", version = "=1.14.17-rc4" }
miraland-vote-program = { path = "../programs/vote", version = "=1.14.17-rc4" }
quinn = "0.8.3"
quinn-proto = "0.8.3"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.3"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
semver = "1.0.10"
serde = "1.0.138"
serde_derive = "1.0.103"
serde_json = "1.0.81"
solarti-token-2022 = { version = "0.6", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-tungstenite = { version = "0.17.1", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.17.2", features = ["rustls-tls-webpki-roots"] }
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.58"
assert_matches = "1.5.0"
jsonrpc-http-server = "18.0.0"
miraland-logger = { path = "../logger", version = "=1.14.17-rc4" }
miraland-perf = { path = "../perf", version = "=1.14.17-rc4" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
