[package]
name = "miraland-client"
description = "Miraland Client"
documentation = "https://docs.rs/miraland-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
miraland-connection-cache = { workspace = true }
miraland-measure = { workspace = true }
miraland-metrics = { workspace = true }
miraland-pubsub-client = { workspace = true }
miraland-quic-client = { workspace = true }
miraland-rpc-client = { workspace = true, features = ["default"] }
miraland-rpc-client-api = { workspace = true }
miraland-rpc-client-nonce-utils = { workspace = true }
miraland-sdk = { workspace = true }
miraland-streamer = { workspace = true }
miraland-thin-client = { workspace = true }
miraland-tpu-client = { workspace = true, features = ["default"] }
miraland-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
