[package]
name = "miraland-connection-cache"
description = "Miraland Connection Cache"
documentation = "https://docs.rs/miraland-connection-cache"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true, optional = true }
log = { workspace = true }
miraland-measure = { workspace = true }
miraland-metrics = { workspace = true }
miraland-sdk = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
miraland-logger = { workspace = true }
miraland-net-utils = { workspace = true }
rand_chacha = { workspace = true }
