[package]
name = "miraland-core"
description = "Blockchain for community beyond the horizon"
version = "1.14.17-rc6"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-core"
readme = "../README.md"
repository = "https://github.com/miraland-labs/miraland"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
license = "Apache-2.0"
edition = "2021"

[badges]
codecov = { repository = "miraland-labs/miraland", branch = "main", service = "github" }

[lib]
crate-type = ["lib"]
name = "miraland_core"

[dependencies]
ahash = "0.7.6"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = { version = "4.0.2", features = ["rayon", "raw-api"] }
eager = "0.1.0"
etcd-client = { version = "0.8.1", features = ["tls"] }
fs_extra = "1.2.0"
histogram = "0.6.9"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.7.7"
min-max-heap = "1.3.0"
miraland-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=1.14.17-rc6" }
miraland-bloom = { path = "../bloom", version = "=1.14.17-rc6" }
miraland-client = { path = "../client", version = "=1.14.17-rc6" }
miraland-entry = { path = "../entry", version = "=1.14.17-rc6" }
miraland-frozen-abi = { path = "../frozen-abi", version = "=1.14.17-rc6" }
miraland-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.14.17-rc6" }
miraland-geyser-plugin-manager = { path = "../geyser-plugin-manager", version = "=1.14.17-rc6" }
miraland-gossip = { path = "../gossip", version = "=1.14.17-rc6" }
miraland-ledger = { path = "../ledger", version = "=1.14.17-rc6" }
miraland-measure = { path = "../measure", version = "=1.14.17-rc6" }
miraland-metrics = { path = "../metrics", version = "=1.14.17-rc6" }
miraland-net-utils = { path = "../net-utils", version = "=1.14.17-rc6" }
miraland-perf = { path = "../perf", version = "=1.14.17-rc6" }
miraland-poh = { path = "../poh", version = "=1.14.17-rc6" }
miraland-program-runtime = { path = "../program-runtime", version = "=1.14.17-rc6" }
miraland-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.14.17-rc6" }
miraland-rpc = { path = "../rpc", version = "=1.14.17-rc6" }
miraland-runtime = { path = "../runtime", version = "=1.14.17-rc6" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc6" }
miraland-send-transaction-service = { path = "../send-transaction-service", version = "=1.14.17-rc6" }
miraland-streamer = { path = "../streamer", version = "=1.14.17-rc6" }
miraland-transaction-status = { path = "../transaction-status", version = "=1.14.17-rc6" }
miraland-version = { path = "../version", version = "=1.14.17-rc6" }
miraland-vote-program = { path = "../programs/vote", version = "=1.14.17-rc6" }
num_enum = "0.5.7"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.3"
serde = "1.0.138"
serde_derive = "1.0.103"
sys-info = "0.9.1"
tempfile = "3.3.0"
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
trees = "0.4.2"

[dev-dependencies]
matches = "0.1.9"
miraland-logger = { path = "../logger", version = "=1.14.17-rc6" }
miraland-program-runtime = { path = "../program-runtime", version = "=1.14.17-rc6" }
miraland-stake-program = { path = "../programs/stake", version = "=1.14.17-rc6" }
raptorq = "1.7.0"
serde_json = "1.0.81"
serial_test = "0.8.0"
static_assertions = "1.1.0"
systemstat = "0.1.11"
test-case = "2.1.0"

[target."cfg(unix)".dependencies]
sysctl = "0.4.4"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[[bench]]
name = "unprocessed_packet_batches"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
