[package]
name = "miraland-core"
description = "Blockchain for sovereign individuals living in Mirascape Horizon"
documentation = "https://docs.rs/miraland-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[badges]
codecov = { repository = "miraland-labs/miraland", branch = "main", service = "github" }

[lib]
crate-type = ["lib"]
name = "miraland_core"

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
eager = { workspace = true }
etcd-client = { workspace = true, features = ["tls"] }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
miraland-accounts-db = { workspace = true }
miraland-bloom = { workspace = true }
miraland-client = { workspace = true }
miraland-cost-model = { workspace = true }
miraland-entry = { workspace = true }
miraland-frozen-abi = { workspace = true }
miraland-frozen-abi-macro = { workspace = true }
miraland-geyser-plugin-manager = { workspace = true }
miraland-gossip = { workspace = true }
miraland-ledger = { workspace = true }
miraland-measure = { workspace = true }
miraland-metrics = { workspace = true }
miraland-net-utils = { workspace = true }
miraland-perf = { workspace = true }
miraland-poh = { workspace = true }
miraland-program-runtime = { workspace = true }
miraland-quic-client = { workspace = true }
miraland-rayon-threadlimit = { workspace = true }
miraland-rpc = { workspace = true }
miraland-rpc-client-api = { workspace = true }
miraland-runtime = { workspace = true }
miraland-sdk = { workspace = true }
miraland-send-transaction-service = { workspace = true }
miraland-streamer = { workspace = true }
miraland-svm = { workspace = true }
miraland-tpu-client = { workspace = true }
miraland-transaction-status = { workspace = true }
miraland-turbine = { workspace = true }
miraland-unified-scheduler-pool = { workspace = true }
miraland-version = { workspace = true }
miraland-vote = { workspace = true }
miraland-vote-program = { workspace = true }
miraland-wen-restart = { workspace = true }
num_enum = { workspace = true }
prio-graph = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rolling-file = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trees = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fs_extra = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
miraland-core = { path = ".", features = ["dev-context-only-utils"] }
miraland-logger = { workspace = true }
miraland-poh = { workspace = true, features = ["dev-context-only-utils"] }
miraland-program-runtime = { workspace = true }
miraland-runtime = { workspace = true, features = ["dev-context-only-utils"] }
miraland-sdk = { workspace = true, features = ["dev-context-only-utils"] }
miraland-stake-program = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
static_assertions = { workspace = true }
systemstat = { workspace = true }
test-case = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []

[[bench]]
name = "banking_stage"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
