[package]
name = "miraland-cost-model"
description = "Miraland cost model"
documentation = "https://docs.rs/miraland-cost-model"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
miraland-address-lookup-table-program = { workspace = true }
miraland-bpf-loader-program = { workspace = true }
miraland-compute-budget-program = { workspace = true }
miraland-config-program = { workspace = true }
miraland-frozen-abi = { workspace = true }
miraland-frozen-abi-macro = { workspace = true }
miraland-loader-v4-program = { workspace = true }
miraland-metrics = { workspace = true }
miraland-program-runtime = { workspace = true }
miraland-sdk = { workspace = true }
miraland-stake-program = { workspace = true }
miraland-system-program = { workspace = true }
miraland-vote-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "miraland_cost_model"

[dev-dependencies]
miraland-logger = { workspace = true }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
