[package]
name = "miraland-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
clap = { version = "4.5.0", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
miraland-bench-tps = { workspace = true }
miraland-client = { workspace = true }
miraland-core = { workspace = true }
miraland-faucet = { workspace = true }
miraland-gossip = { workspace = true }
miraland-logger = { workspace = true }
miraland-measure = { workspace = true }
miraland-net-utils = { workspace = true }
miraland-perf = { workspace = true }
miraland-rpc = { workspace = true }
miraland-rpc-client = { workspace = true }
miraland-sdk = { workspace = true }
miraland-streamer = { workspace = true }
miraland-tpu-client = { workspace = true }
miraland-version = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
miraland-local-cluster = { workspace = true }
miraland-thin-client = { workspace = true }
