[package]
name = "miraland-download-utils"
version = "1.14.17-rc4"
description = "Miraland Download Utils"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-download-utils"
edition = "2021"

[dependencies]
console = "0.15.0"
indicatif = "0.16.2"
log = "0.4.17"
miraland-runtime = { path = "../runtime", version = "=1.14.17-rc4" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc4" }
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }

[lib]
crate-type = ["lib"]
name = "miraland_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
