[package]
name = "miraland-download-utils"
description = "Miraland Download Utils"
documentation = "https://docs.rs/miraland-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
console = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
miraland-runtime = { workspace = true }
miraland-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "miraland_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
