[package]
name = "miraland-entry"
version = "1.14.17-rc6"
description = "Miraland Entry"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-poh"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
log = "0.4.17"
miraland-measure = { path = "../measure", version = "=1.14.17-rc6" }
miraland-merkle-tree = { path = "../merkle-tree", version = "=1.14.17-rc6" }
miraland-metrics = { path = "../metrics", version = "=1.14.17-rc6" }
miraland-perf = { path = "../perf", version = "=1.14.17-rc6" }
miraland-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.14.17-rc6" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc6" }
rand = "0.7.0"
rayon = "1.5.3"
serde = "1.0.138"

[dev-dependencies]
matches = "0.1.9"
miraland-logger = { path = "../logger", version = "=1.14.17-rc6" }

[lib]
crate-type = ["lib"]
name = "miraland_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
