[package]
name = "miraland-entry"
description = "Miraland Entry"
documentation = "https://docs.rs/miraland-poh"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
dlopen2 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
miraland-measure = { workspace = true }
miraland-merkle-tree = { workspace = true }
miraland-metrics = { workspace = true }
miraland-perf = { workspace = true }
miraland-rayon-threadlimit = { workspace = true }
miraland-sdk = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
miraland-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "miraland_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
