[package]
name = "miraland-faucet"
version = "1.14.17"
description = "Miraland Faucet"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-faucet"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = "2.33"
crossbeam-channel = "0.5"
log = "0.4.17"
miraland-cli-config = { path = "../cli-config", version = "=1.14.17" }
miraland-sdk = { path = "../sdk", version = "=1.14.17" }
miraland-version = { path = "../version", version = "=1.14.17" }
serde = "1.0.138"
serde_derive = "1.0.103"
miraland-clap-utils = { path = "../clap-utils", version = "=1.14.17" }
miraland-logger = { path = "../logger", version = "=1.14.17" }
miraland-metrics = { path = "../metrics", version = "=1.14.17" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "miraland_faucet"

[[bin]]
name = "miraland-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
