[package]
name = "miraland-faucet"
description = "Miraland Faucet"
documentation = "https://docs.rs/miraland-faucet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
miraland-clap-utils = { workspace = true }
miraland-cli-config = { workspace = true }
miraland-logger = { workspace = true }
miraland-metrics = { workspace = true }
miraland-sdk = { workspace = true }
miraland-version = { workspace = true }
solarti-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "miraland_faucet"

[[bin]]
name = "miraland-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
