[package]
name = "miraland-frozen-abi"
description = "Miraland Frozen ABI"
documentation = "https://docs.rs/miraland-frozen-abi"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
bv = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
log = { workspace = true, features = ["std"] }
miraland-frozen-abi-macro = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
block-buffer = { workspace = true }
either = { workspace = true, features = ["use_std"] }
generic-array = { workspace = true, features = ["serde", "more_lengths"] }
im = { workspace = true, features = ["rayon", "serde"] }
memmap2 = { workspace = true }
subtle = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dev-dependencies]
bitflags = { workspace = true }
miraland-logger = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }
