[package]
name = "miraland-genesis-utils"
description = "Miraland Genesis Utils"
documentation = "https://docs.rs/miraland-genesis-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
miraland-accounts-db = { workspace = true }
miraland-download-utils = { workspace = true }
miraland-rpc-client = { workspace = true }
miraland-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "miraland_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
