[package]
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
edition = "2021"
name = "miraland-genesis"
description = "Blockchain for community beyond the horizon"
version = "1.14.18"
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-genesis"

[dependencies]
base64 = "0.13.0"
clap = "2.33.1"
miraland-clap-utils = { path = "../clap-utils", version = "1.14.18" }
miraland-cli-config = { path = "../cli-config", version = "1.14.18" }
miraland-entry = { path = "../entry", version = "1.14.18" }
miraland-ledger = { path = "../ledger", version = "1.14.18" }
miraland-logger = { path = "../logger", version = "1.14.18" }
miraland-runtime = { path = "../runtime", version = "1.14.18" }
miraland-sdk = { path = "../sdk", version = "1.14.18" }
miraland-stake-program = { path = "../programs/stake", version = "1.14.18" }
miraland-version = { path = "../version", version = "1.14.18" }
miraland-vote-program = { path = "../programs/vote", version = "1.14.18" }
serde = "1.0.138"
serde_json = "1.0.81"
serde_yaml = "0.8.26"
tempfile = "3.6.0"

[[bin]]
name = "miraland-genesis"
path = "src/main.rs"

[lib]
name = "miraland_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
