[package]
name = "miraland-genesis"
description = "Blockchain for community beyond the horizon"
documentation = "https://docs.rs/miraland-genesis"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
miraland-accounts-db = { workspace = true }
miraland-clap-utils = { workspace = true }
miraland-cli-config = { workspace = true }
miraland-entry = { workspace = true }
miraland-ledger = { workspace = true }
miraland-logger = { workspace = true }
miraland-runtime = { workspace = true }
miraland-sdk = { workspace = true }
miraland-stake-program = { workspace = true }
miraland-version = { workspace = true }
miraland-vote-program = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "miraland-genesis"
path = "src/main.rs"

[lib]
name = "miraland_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
